<resources>
    <!--
    TODO: Before you run your application, you need a Google Maps API key.

    To get one, follow this link, follow the directions and press "Create" at the end:

    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=EA:67:EF:58:3D:88:FE:EE:7F:BC:D1:7F:BC:C3:37:73:E2:83:10:55%3Bcom.androidtutorialpoint.googlemapsapp

    You can also add your credentials to an existing key, using these values:

    Package name:
    xxxxxxxxxxxxxxxxxxxxxxxxxxxx

    SHA-1 certificate fingerprint:
    xxxxxxxxxxxxxxxxxxxxxxxx

    Alternatively, follow the directions here:
    https://developers.google.com/maps/documentation/android/start#get-key

    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
    string in this file.
    -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBhyXbr7wudoGH5FbVtrR5bjKA4A3XSDts</string>
    <string name="app_name">Riders</string>
    <!--ON TRIP SCREEN -->
    <string name="str_trip">OnTrip</string>
    <!--HOME SCREEN-->
    <string name="title_activity_welcome">Home Screen</string>
    <!--WELCOME SCREEN-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_desc">Have fun, be active. Ride a bike instead of driving.</string>
    <string name="slide_2_desc">Connect with your friends on Sidekick in order to see what they are up to</string>
    <string name="slide_3_desc">Discover new roads with Sidekick</string>
    <string name="slide_4_desc">Plan your trip and organize them in your roadbook!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!--SHARE POP DIALOG -->
    <string name="strShareCpation">Share via</string>

    <!-- NEAR BY PLACES SCREEN -->
    <string name="strFilterCaption">Filter</string>
    <string name="str_near_by_place">Near By Places</string>

    <integer-array name="random_imgs">
        <item>@drawable/bike1</item>
        <item>@drawable/bike2</item>
        <item>@drawable/bike3</item>
        <item>@drawable/bike4</item>
        <item>@drawable/bike5</item>
        <item>@drawable/bike6</item>
    </integer-array>

    <!--Navigation Drawer-->
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>

    <!--HOME SCREEN -->
    <string name="str_home_screen_caption">Home Screem</string>
    <!--SIGN UP SCREEN-->

    <string name="signup_hint_username"><font size="15">Username</font></string>
    <string name="signup_hint_mobile"><font size="15">Mobile</font></string>
    <string name="signup_hint_petname"><font size="15">Pet Name</font></string>
    <string name="signup_hint_address"><font size="15">Address</font></string>
    <string name="signup_hint_dob"><font size="15">Date Of Birth</font></string>
    <string name="signup_hint_bg"><font size="15">Blood Group</font></string>
    <string name="signup_hint_sos1"><font size="15">SOS Number 1</font></string>
    <string name="signup_hint_sos2"><font size="15">SOS Number 2</font></string>
    <string name="signup_hint_mail"><font size="15">Email</font></string>
    <string name="signup_hint_pswrd"><font size="15">Password</font></string>

    <!--VALIDATION-->
    <string name="login_valid_email">Email address cannot be blank.</string>
    <string name="invalid_email">Invalid email address.</string>
    <string name="password_validation">Invalid password. Password must be at least 6 characters long, contain one upper case, one lower case, and one numerical digit. Allowed symbols: !@#$%^&amp;*()</string>
    <string name="email_not_verified">Email Not Verified</string>
    <string name="enter_password">Password cannot be blank.</string>


</resources>
