<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_back1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="A long ride can clear your mind"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/signup_slogan_textsize"
                android:textStyle="bold|italic"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_slogan"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/signup_logo_margintop"
                android:background="@drawable/twitter_icon" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_logo"
                android:layout_marginTop="20dp"
                android:text="SIGN UP"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:typeface="sans" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="@dimen/signup_field_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_signup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/signup_drawable_padding"
                android:hint="@string/signup_hint_username"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/signup_field_textsize" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="@dimen/signup_field_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/signup_field_margin_top"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="@dimen/signup_drawable_padding"
                android:hint="@string/signup_hint_mobile"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/signup_field_textsize" />

            <EditText
                android:id="@+id/et_petname"
                android:layout_width="@dimen/signup_field_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_mobile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/signup_field_margin_top"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="@dimen/signup_drawable_padding"
                android:hint="@string/signup_hint_petname"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/signup_field_textsize" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="@dimen/signup_field_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_petname"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/signup_field_margin_top"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/home"
                android:drawablePadding="@dimen/signup_drawable_padding"
                android:hint="@string/signup_hint_address"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/signup_field_textsize" />

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="@dimen/signup_field_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_address"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/signup_field_margin_top"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/calendar"
                android:drawablePadding="@dimen/signup_drawable_padding"
                android:hint="@string/signup_hint_dob"
                android:textColor="@color/white"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/signup_field_textsize" />

            <Button
                android:id="@+id/btn_signup_cont"
                android:layout_width="@dimen/signup_button_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_dob"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/signup_button_margintop"
                android:background="@drawable/login_btn"
                android:text="CONTINUE"
                android:textColor="@color/white"
                android:textSize="@dimen/signup_btn_textsize" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>